--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   "dependencies": {
     "@webgpu/types": "^0.1.40",
     "electron-devtools-installer": "^3.2.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "yy-fps": "^2.0.1"
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
